<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/cv_sign_in_container"
                android:layout_marginStart="@dimen/_32dp"
                android:layout_marginEnd="@dimen/_32dp" app:cardCornerRadius="@dimen/_10dp"
                app:cardElevation="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_24dp" android:layout_marginTop="@dimen/_8dp"
                app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/cl_sign_in">

                <TextView
                        android:text="@string/new_to_user_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_sign_up"
                        app:layout_constraintStart_toStartOf="@+id/btn_fb_sign_in"
                        app:layout_constraintEnd_toEndOf="@+id/btn_fb_sign_in" android:layout_marginTop="@dimen/_24dp"
                        app:layout_constraintTop_toBottomOf="@+id/btn_fb_sign_in" android:textSize="18sp"
                        android:gravity="center" android:textColor="@color/colorPrimary"/>
                <Button
                        android:text="@string/sign_in_with_facebook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_fb_sign_in"
                        android:layout_marginTop="@dimen/_24dp"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sp"
                        android:drawablePadding="@dimen/_5dp"
                        android:background="@drawable/curved_box_white_background"
                        android:paddingLeft="@dimen/_13dp"
                        android:paddingRight="@dimen/_13dp"
                        app:layout_constraintTop_toBottomOf="@+id/btn_google_sign_in"
                        app:layout_constraintStart_toStartOf="@+id/btn_google_sign_in"
                        app:layout_constraintEnd_toEndOf="@+id/btn_google_sign_in"
                        android:drawableStart="@drawable/facebook"/>
                <Button
                        android:text="@string/sign_in_with_google"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_google_sign_in"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sp"
                        android:drawablePadding="@dimen/_5dp"
                        android:background="@drawable/curved_box_white_background"
                        android:paddingLeft="@dimen/_13dp"
                        android:paddingRight="@dimen/_13dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="50dp" android:layout_marginStart="50dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp"
                        android:layout_marginRight="50dp" android:drawableStart="@drawable/ic_google"
                        android:layout_marginTop="@dimen/_32dp" app:layout_constraintTop_toBottomOf="@+id/tv_welcome"/>
                <TextView
                        android:text="@string/welcome_to_you"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/tv_welcome"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="@dimen/_24dp"
                        app:layout_constraintHorizontal_bias="1.0" android:gravity="center"
                        android:textColor="@color/black" android:textStyle="bold" android:textSize="18sp"
                        android:layout_marginLeft="@dimen/_8dp" android:layout_marginStart="@dimen/_8dp"
                        android:layout_marginRight="@dimen/_8dp" android:layout_marginEnd="@dimen/_8dp"/>
                <TextView
                        android:text="@string/terms_of_service_and_privacy_policy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_term_info"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/_8dp" app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"
                        android:layout_marginLeft="@dimen/_24dp" android:layout_marginStart="@dimen/_24dp"
                        android:layout_marginRight="@dimen/_24dp" android:layout_marginEnd="@dimen/_24dp"
                        android:textColor="@color/black" android:gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="@dimen/_32dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/tv_guest_user_signin"
                android:text="@string/sign_in_as_guest"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_8dp"/>

        <ProgressBar
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:indeterminate="true"
                android:id="@+id/progress"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>